--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <script>
     const clientId = 'db3c7b32f6394c609770e9ba8666f657';
-    const redirectUri = 'https://branlio96.github.io/musica-boda/';
+    const redirectUri = 'https://branlio96.github.io/musica-boda';
     const trackUri = 'spotify:track:6SKwQghsR8AISlxhcwyA9R';
 
     if (!window.location.hash.includes('access_token')) {
