--- a/index.html
+++ b/index.html
@@ -3,10 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prueba GitHub Pages</title>
+  <title>Autenticación de Spotify</title>
+  <script>
+    // Tu client ID de Spotify
+    const clientId = 'db3c7b32f6394c609770e9ba8666f657'; // Reemplazado con tu client ID
+
+    // URI de redirección configurado en Spotify Developer
+    const redirectUri = 'https://branlio96.github.io/musica-boda/callback'; // Usando callback como URI de redirección
+
+    // Los permisos necesarios para la aplicación
+    const scopes = 'user-modify-playback-state user-read-playback-state';
+
+    // URL de autenticación de Spotify
+    const authUrl = `https://accounts.spotify.com/authorize?client_id=${clientId}&response_type=token&redirect_uri=${encodeURIComponent(redirectUri)}&scope=${encodeURIComponent(scopes)}`;
+
+    // Función para redirigir a la página de autenticación de Spotify
+    function loginToSpotify() {
+      window.location.href = authUrl;
+    }
+
+    // Función para obtener el token de la URL después de la redirección
+    function getTokenFromUrl() {
+      const urlParams = new URLSearchParams(window.location.hash.substring(1));
+      return urlParams.get('access_token');
+    }
+
+    // Si ya hay un token en la URL, lo mostramos
+    window.onload = function() {
+      const token = getTokenFromUrl();
+      if (token) {
+        document.getElementById('message').innerText = '¡Autenticación exitosa!';
+        document.getElementById('token').innerText = `Token de acceso: ${token}`;
+      } else {
+        document.getElementById('message').innerText = 'No autenticado';
+      }
+    };
+  </script>
 </head>
 <body>
-  <h1>¡GitHub Pages está funcionando!</h1>
-  <p>Este es un archivo de prueba para verificar que GitHub Pages esté configurado correctamente.</p>
+  <h1>Spotify Authentication</h1>
+  <p id="message">No autenticado</p>
+
+  <!-- Muestra el token de acceso si está presente -->
+  <p id="token"></p>
+
+  <!-- Botón para iniciar sesión en Spotify -->
+  <button onclick="loginToSpotify()">Iniciar sesión en Spotify</button>
 </body>
 </html>
